# Development-of-AI-agents

./: .gitignore  README.md
11. Графовая память и сложный контекст/: ARCHITECTURE.md  README.md  (+1 more)
11. Графовая память и сложный контекст/voice-assistant-v2/: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  install_linux.sh  install_windows.cmd  main.py  pyproject.toml  pytest.ini  run_linux.sh  run_windows.cmd  seed_knowledge.py  stop_linux.sh  stop_windows.cmd
11. Графовая память и сложный контекст/voice-assistant-v2/app/: __init__.py  config.py  dialogue_manager.py  embeddings.py  knowledge.py  llm_client.py  reasoning_filter.py  stt.py  tools.py  tts.py  weather.py  ws_gateway.py
11. Графовая память и сложный контекст/voice-assistant-v2/app/static/: app.js  index.html  pcm-worklet.js
11. Графовая память и сложный контекст/voice-assistant-v2/data-generator/: README.md  conftest.py  main.py
11. Графовая память и сложный контекст/voice-assistant-v2/data-generator/graph_generator/: __init__.py  config.py  exporter.py  generator.py  graph.py  models.py
11. Графовая память и сложный контекст/voice-assistant-v2/data-generator/tests/: test_documents.py  test_generator.py  test_graph.py
11. Графовая память и сложный контекст/voice-assistant-v2/tests/: conftest.py  test_dialogue_manager.py  test_knowledge.py  test_llm_client.py  test_memory.py  test_seed_knowledge.py  test_tools.py  test_weather.py  test_ws_gateway.py
9. OpenAI Realtime API и A2A взаимодействие  ДЗ/voice-assistant/: .env.example  .gitignore  README.md  install_linux.sh  install_windows.cmd  main.py  pyproject.toml  pytest.ini  run_linux.sh  run_windows.cmd
9. OpenAI Realtime API и A2A взаимодействие  ДЗ/voice-assistant/app/: config.py  dialogue_manager.py  llm_client.py  memory.py  weather.py  ws_gateway.py
9. OpenAI Realtime API и A2A взаимодействие  ДЗ/voice-assistant/tests/: conftest.py  test_dialogue_manager.py  test_llm_client.py
(+23 files in other folders)
