[project]
name = "voice-assistant"
version = "0.1.0"
description = "Учебный демо-сервис голосового ассистента (ДЗ к уроку 9)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "openai>=1.40",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
# аудио-часть опциональна, без нее сервис работает в текстовом режиме
audio = [
    "faster-whisper>=1.1",
    "piper-tts>=1.2",
]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
